# csl-sanitizer

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.en.md  README.md  good.yaml  main.py  main.user.js  pyproject.toml  uv-run.txt
.github/: dependabot.yml
.github/workflows/: check.yaml  deploy.yaml
lib/utils/: hayagriva.ts  hayagriva_preserve_order.ts
src/csl_sanitizer/: csl.py  indexing.css  indexing.py  indexing.typ  main.py  normalize.py  util.py
tests/: README.md  run_tests.py
tests/normalize/: drop_empty_else_branches.toml  drop_empty_groups.toml  drop_empty_text_case_attrs.toml  fill_empty_layouts.toml  fix_deprecated_term_unpublished.toml  lowercase_locator_attrs.toml  remove_citation_range_delimiter_terms.toml  remove_duplicate_layouts.toml  remove_institution_in_names.toml  remove_large_long_ordinal_terms.toml  remove_nonstandard_variables-choose.toml  remove_nonstandard_variables.toml  replace_nonstandard_original_variables.toml
