[project]
name = "csl-sanitizer"
version = "0.1.0"
description = "Sanitize Citation Style Language (CSL) files for hayagriva."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
csl-sanitizer = "csl_sanitizer:main.main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
# Git submodules in styles/ contain python files.
extend-exclude = ["styles/"]

[tool.ruff.lint]
extend-select = [
    "U",
    "TYP",
    "F",
    "I",
]
