[project]
name = "csl-sanitizer"
version = "0.1.0"
description = "Sanitize Citation Style Language (CSL) files for hayagriva."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["hayagriva-py"]

[project.scripts]
csl-sanitizer = "csl_sanitizer:main.main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
# Git submodules in styles/ contain python files.
extend-exclude = ["styles/"]

[tool.ruff.lint]
extend-select = ["U", "TYP", "F", "I"]

[tool.uv.sources]
hayagriva-py = [
    { marker = "platform_system == 'Linux'", url = "https://github.com/YDX-2147483647/hayagriva-gb-tracking/releases/download/hayagriva-py-main.2025-12-27.a137441/hayagriva_py-0.1.0-cp310-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" },
    { marker = "platform_system == 'Windows'", url = "https://github.com/YDX-2147483647/hayagriva-gb-tracking/releases/download/hayagriva-py-main.2025-12-27.a137441/hayagriva_py-0.1.0-cp310-abi3-win_amd64.whl" },
    { marker = "platform_system != 'Linux' and platform_system != 'Windows'", url = "https://github.com/YDX-2147483647/hayagriva-gb-tracking/releases/download/hayagriva-py-main.2025-12-27.a137441/hayagriva_py-0.1.0.tar.gz" },
]
